--- a/src/AureliaMovies/wwwroot/index.html
+++ b/src/AureliaMovies/wwwroot/index.html
@@ -1,9 +1,8 @@
-﻿<!DOCTYPE>
-
-<html>
+﻿<html>
 <head>
     <meta charset="utf-8" />
     <title>At The Aurelia Movies</title>
+    <link href="jspm_packages/github/twbs/bootstrap@3.3.4/css/bootstrap.css" rel="stylesheet" />
 </head>
 <body aurelia-app>
     <script src="jspm_packages/system.js"></script>
