adding mvc ability

--- a/src/AureliaMovies/wwwroot/app.html
+++ b/src/AureliaMovies/wwwroot/app.html
@@ -1,5 +1,6 @@
 ﻿<template>
     <div class="container">
         <div>${message}</div>
+        <button click.trigger="changeMessage()">Say Goodbye</button>
     </div>
 </template>
