update babel for decorators

--- a/src/AureliaMovies/wwwroot/app.html
+++ b/src/AureliaMovies/wwwroot/app.html
@@ -3,4 +3,10 @@
         <div>${message}</div>
         <button click.trigger="changeMessage()">Say Goodbye</button>
     </div>
+    ${movies.length}
+    <table>
+        <tr >
+            <td></td>
+        </tr>
+    </table>
 </template>
