--- a/src/AureliaMovies/wwwroot/app.html
+++ b/src/AureliaMovies/wwwroot/app.html
@@ -3,10 +3,9 @@
         <div>${message}</div>
         <button click.trigger="changeMessage()">Say Goodbye</button>
     </div>
-    ${movies.length}
     <table>
-        <tr >
-            <td></td>
+        <tr repeat.for="movie of movies">
+            <td>${movie.Title}</td>
         </tr>
     </table>
 </template>
