--- a/src/AureliaMovies/wwwroot/index.html
+++ b/src/AureliaMovies/wwwroot/index.html
@@ -4,7 +4,7 @@
     <title>At The Aurelia Movies</title>
     <link href="jspm_packages/github/twbs/bootstrap@3.3.4/css/bootstrap.css" rel="stylesheet" />
 </head>
-<body aurelia-app>
+<body aurelia-app="main">
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
     <script>
