wrestling with route-href

--- a/src/AureliaMovies/wwwroot/movies/movieList.html
+++ b/src/AureliaMovies/wwwroot/movies/movieList.html
@@ -9,7 +9,7 @@
             <td>${movie.Title}</td>
             <td>${movie.ReleaseYear}</td>
             <td>
-                <button class="btn btn-default">Details</button>
+                <a route-href="route: details; params.bind: {id:movie.Id}" class="btn btn-default">Details</a>
             </td>
         </tr>
     </table>
