--- a/src/AureliaMovies/wwwroot/movies/details.html
+++ b/src/AureliaMovies/wwwroot/movies/details.html
@@ -1,3 +1,9 @@
 ﻿<template>
-
+    <h3>${movie.Title}</h3>
+    <div>
+        Released in ${movie.ReleaseYear}   
+    </div>
+    <div>
+        <a href="#/" class="btn btn-default">Back to list</a>
+    </div>
 </template>
