--- a/src/AureliaMovies/wwwroot/index.html
+++ b/src/AureliaMovies/wwwroot/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8" />
     <title>At The Aurelia Movies</title>
     <link href="jspm_packages/github/twbs/bootstrap@3.3.4/css/bootstrap.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
 </head>
 <body aurelia-app="main">
     <script src="jspm_packages/system.js"></script>
