--- a/src/AureliaMovies/wwwroot/movies/details.html
+++ b/src/AureliaMovies/wwwroot/movies/details.html
@@ -4,6 +4,6 @@
         Released in ${movie.ReleaseYear}   
     </div>
     <div>
-        <a href="#/" class="btn btn-default">Back to list</a>
+        <a route-href="route:home" class="btn btn-default">Back to list</a>
     </div>
 </template>
