--- a/src/AureliaMovies/wwwroot/movies/edit.html
+++ b/src/AureliaMovies/wwwroot/movies/edit.html
@@ -1,1 +1,34 @@
-﻿
+﻿<template>
+
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">Profile</h3>
+        </div>
+        <div class="panel-body">
+
+            <form role="form" class="form-horizontal" submit.delegate="save()" validate.bind="validation">
+
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Title</label>
+                    <div class="col-sm-10">
+                        <input type="text" placeholder="Title" class="form-control" value.bind="movie.Title">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Release</label>
+                    <div class="col-sm-10">
+                        <input type="text" placeholder="Release" class="form-control" value.bind="movie.ReleaseYear">
+                    </div>
+                </div>
+
+            </form>
+
+        </div>
+    </div>
+
+    <div class="button-bar">
+        <button class="btn btn-primary" click.delegate="save()" disabled.bind="!validation.result.isValid">Save</button>
+    </div>
+
+</template>
