--- a/src/AureliaMovies/wwwroot/movies/movieList.html
+++ b/src/AureliaMovies/wwwroot/movies/movieList.html
@@ -14,5 +14,5 @@
             </td>
         </tr>
     </table>
-  
+    <a route-href="route:create" class="btn btn-default">Create</a>
 </template>
