--- a/src/AureliaMovies/wwwroot/app.html
+++ b/src/AureliaMovies/wwwroot/app.html
@@ -1,18 +1,9 @@
 ﻿<template>
+      
+    <require from="./nav-menu"></require>
+   
+    <nav-menu router.bind="router"></nav-menu>
 
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#/">${router.title}</a>
-            </div>
-            <ul class="nav navbar-nav">
-                <li repeat.for="row of router.navigation"
-                    class="${row.isActive ? 'active' : ''}">
-                    <a href.bind="row.href">${row.title}</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
     <div class="container">
         <div class="fa fa-spinner fa-spin" show.bind="router.isNavigating">
             <i class="fa fa-spinner fa-spin"></i>
