--- a/src/AureliaMovies/wwwroot/index.html
+++ b/src/AureliaMovies/wwwroot/index.html
@@ -1,16 +1,16 @@
 ﻿<html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>At The Aurelia Movies</title>
-    <link href="jspm_packages/github/twbs/bootstrap@3.3.5/css/bootstrap.css" rel="stylesheet" />
-    <link href="jspm_packages/npm/font-awesome@4.4.0/css/font-awesome.css" rel="stylesheet" />
-    <link href="styles.css" rel="stylesheet" />
+    <link href="jspm_packages/github/twbs/bootstrap@3.3.5/css/bootstrap.css" rel="stylesheet">
+    <link href="jspm_packages/npm/font-awesome@4.4.0/css/font-awesome.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body aurelia-app="main">
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
     <script>
-        System.import("aurelia-bootstrapper");        
+        System.import("aurelia-bootstrapper");
     </script>
 </body>
 </html>
